crates/mir/filetests/tests/invalid_programs/multiple_block_terminators.mir
// @harness parser_roundtrip
// @harness cfg_integrity_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0
            (constant v1 (1))
            (return (v1))
            (constant v0 (0))
            (return (v0)))))